--- a/web-board/src/pages/profile/components/Devices.css
+++ b/web-board/src/pages/profile/components/Devices.css
@@ -1,40 +1,84 @@
-.account-box {
+/* .account-box {
     width: 90%;
-    min-width: 400px;
+    min-width: 300px;
     margin: auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #fff;
-  }
+  } */
+
+
+
+
   
-  .account-box h2 {
-    color: #007ABF;
-  }
-  
-  .add-device-link {
-    display: inline-block;
-    margin-top: 30px;
-    padding: 10px 20px;
-    color: #fff;
-    background-color: #007ABF;
-    text-decoration: none;
-    border: 1px solid #007ABF;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .add-device-link:hover {
-    background-color: #ffffff;
-    color: #007ABF;
-    text-decoration: underline;
-  }
-  
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     .account-box {
-      padding: 15px;
+      padding: 10px;
+      margin: 10px;
     }
+  } */
+  
+.account-box h2 {
+  color: #007ABF;
+}
+
+.add-device-link {
+  display: inline-block;
+  margin-top: 30px;
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #007ABF;
+  text-decoration: none;
+  border: 1px solid #007ABF;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.add-device-link:hover {
+  background-color: #ffffff;
+  color: #007ABF;
+  text-decoration: underline;
+}
+
+.device-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.device-item {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.device-details {
+  margin-bottom: 10px;
+  line-height: 1.5;
+  color: #333;
+}
+
+.device-details strong {
+  font-weight: bold;
+}
+
+.dev-name{
+  color: #007ABF;
+}
+
+.device-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media (max-width: 768px) {
+  .device-item {
+    padding: 15px;
   }
-    
+}
+
